--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
         cache: 'npm'
     - name: install dependencies
       run: npm ci
-    - name: build project 
-      run: npm run build --if-present
+    # - name: build project 
+    #   run: npm run build --if-present
