--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "datapulse-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://md98uddin.github.io/datapulse-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "prettier": "^3.1.0"
   }
 }
