--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
           cache: "npm"
       - name: install dependencies
         run: npm ci
-      - name: code format check
-        run: npm run format-check
+      # - name: code format check
+      #   run: npm run format-check
     # - name: build project
     #   run: npm run build --if-present
